--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML> 
 <html>
     <head>
-      <title>RedditAPI</title> 
+      <title>SubredditAPI</title> 
       <meta name="viewport" content="width=device-width, initial-scale=1"> 
       <meta http-equipv="refresh" content="30;url=http://127.0.0.1:5000/" /> 
     </head>
     <body>
         <h1>API to check AndroidRoot posts!</h1>
-        <p>Current subreddit {{subreddit}}</p>
+        <p>Current subreddit: {{posts}}</p>
     </body> 
 </html>            
